[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyflash"
version = "alpha"
authors = [
  { name="Ricardo Yarza", email="ryarza@ucsc.edu" },
]
description = "A Python package for managing FLASH hydrodynamics simulations"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GPL v3 or later",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ryarza/pyflash"
"Bug Tracker" = "https://github.com/ryarza/pyflash/issues"
